--- a/frontend/src/app/globals.scss
+++ b/frontend/src/app/globals.scss
@@ -11,9 +11,9 @@ body {
   background-color: #f8f9fa;
   color: #333;
   line-height: 1.6;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='300' height='300' viewBox='0 0 300 300'%3E%3Cg fill='none' stroke='%23e0e0e0' stroke-width='1'%3E%3Cpath d='M30 40 L270 40 L150 260 Z'/%3E%3Ccircle cx='150' cy='150' r='50'/%3E%3Crect x='100' y='100' width='100' height='100'/%3E%3Cpath d='M50 250 Q150 50 250 250'/%3E%3C/g%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200' viewBox='0 0 200 200'%3E%3Cg fill='%23e0e0e0' fill-opacity='0.4'%3E%3Cpath d='M20 40 l10 -10 l10 10 l-10 10 z' /%3E%3Cpath d='M160 40 a10 10 0 1 0 20 0 a10 10 0 1 0 -20 0' /%3E%3Cpath d='M60 100 l15 0 l0 30 l-30 0 l0 -15 l15 -15 z' /%3E%3Cpath d='M140 130 l15 15 l-15 15 l-15 -15 z' /%3E%3Cpath d='M40 160 l0 -20 l20 0 l0 20 z M45 145 l0 10 l10 0 l0 -10 z' /%3E%3Cpath d='M170 170 c0 -5.523 4.477 -10 10 -10 c5.523 0 10 4.477 10 10 c0 5.523 -4.477 10 -10 10 c-5.523 0 -10 -4.477 -10 -10' /%3E%3C/g%3E%3C/svg%3E");
   background-repeat: repeat;
-  background-size: 300px 300px;
+  background-size: 200px 200px;
 }
 
 .container {
