--- a/frontend/src/appPages/site/components/pages/news/NewsMainContent/NewsMainContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/news/NewsMainContent/NewsMainContent.module.scss
@@ -30,7 +30,7 @@
 
     .news_cards {
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-columns: repeat(3, 1fr);
       gap: 30px;
 
       .news_card {
@@ -44,14 +44,12 @@
         justify-content: space-between;
         gap: 22px;
         background: #fffdfd;
-        -webkit-box-shadow: 23px -2px 61px 20px rgba(0, 0, 0, 0.09);
-        -moz-box-shadow: 23px -2px 61px 20px rgba(0, 0, 0, 0.09);
-        box-shadow: 23px -2px 61px 20px rgba(0, 0, 0, 0.09);
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         padding: 20px;
         transition: transform 0.3s ease-in-out;
 
         &:hover {
-          transform: scale(1.01);
+          transform: scale(1.02);
           cursor: pointer;
         }
 
@@ -69,6 +67,7 @@
           text-align: center;
           color: #333333;
           flex-grow: 1;
+          margin: 10px 0;
         }
 
         .news_end {
@@ -109,6 +108,61 @@
             }
           }
         }
+
+        &.skeleton {
+          background: #fff;
+          overflow: hidden;
+          position: relative;
+
+          &::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            transform: translateX(-100%);
+            background-image: linear-gradient(
+              90deg,
+              rgba(255, 255, 255, 0) 0,
+              rgba(255, 255, 255, 0.2) 20%,
+              rgba(255, 255, 255, 0.5) 60%,
+              rgba(255, 255, 255, 0)
+            );
+            animation: shimmer 2s infinite;
+          }
+
+          .skeleton_image {
+            width: 300px;
+            height: 220px;
+            background-color: #f0f0f0;
+            border-radius: 7px;
+          }
+
+          .skeleton_title {
+            width: 80%;
+            height: 20px;
+            margin: 10px auto;
+            background-color: #f0f0f0;
+            border-radius: 4px;
+          }
+
+          .skeleton_date {
+            width: 40%;
+            height: 15px;
+            background-color: #f0f0f0;
+            border-radius: 4px;
+            margin-top: auto;
+          }
+
+          .skeleton_comments {
+            width: 60px;
+            height: 20px;
+            background-color: #f0f0f0;
+            border-radius: 4px;
+            margin-left: auto;
+          }
+        }
       }
     }
 
@@ -119,7 +173,8 @@
       margin-top: 30px;
       gap: 10px;
 
-      button, span {
+      button,
+      span {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -164,6 +219,12 @@
   }
 }
 
+@keyframes shimmer {
+  100% {
+    transform: translateX(100%);
+  }
+}
+
 @media (min-width: 1400px) {
   .NewsMainContent {
     .content {
@@ -180,7 +241,8 @@
       .news_cards {
         grid-template-columns: repeat(3, 1fr);
         .news_card {
-          img {
+          img,
+          .skeleton_image {
             height: 200px;
           }
         }
@@ -195,7 +257,8 @@
       .news_cards {
         grid-template-columns: repeat(2, 1fr);
         .news_card {
-          h2 {
+          h2,
+          .skeleton_title {
             font-size: 16px;
           }
         }
@@ -215,10 +278,12 @@
         gap: 20px;
         .news_card {
           padding: 15px;
-          img {
+          img,
+          .skeleton_image {
             height: 180px;
           }
-          h2 {
+          h2,
+          .skeleton_title {
             font-size: 15px;
           }
         }
@@ -241,11 +306,13 @@
           max-width: 340px;
           height: 370px;
           padding: 15px;
-          img {
+          img,
+          .skeleton_image {
             height: 200px;
             max-width: 240px;
           }
-          h2 {
+          h2,
+          .skeleton_title {
             font-size: 15px;
           }
           .news_end {
@@ -254,7 +321,8 @@
         }
       }
       .pagination {
-        button, span {
+        button,
+        span {
           width: 30px;
           height: 30px;
           font-size: 12px;
@@ -270,10 +338,12 @@
       .news_cards {
         .news_card {
           height: 320px;
-          img {
+          img,
+          .skeleton_image {
             height: 160px;
           }
-          h2 {
+          h2,
+          .skeleton_title {
             font-size: 14px;
           }
         }
