--- a/frontend/src/appPages/site/components/layout/footer/Footer.module.scss
+++ b/frontend/src/appPages/site/components/layout/footer/Footer.module.scss
@@ -70,6 +70,18 @@
   }
 }
 
+@media (max-width: 768px) {
+  .footer {
+    .logo {
+      display: none;
+    }
+    .content {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+}
+
 @media (max-width: 430px) {
   .footer {
     .logo {
