--- a/frontend/src/appPages/site/components/layout/header/Header.module.scss
+++ b/frontend/src/appPages/site/components/layout/header/Header.module.scss
@@ -537,7 +537,7 @@
 
         li {
           padding: 5px 0;
-          border-bottom: 1px solid #fff;
+          border-bottom: 1px solid #fcf7f7;
 
           &:last-child {
             border-bottom: none;
