--- a/frontend/src/appPages/site/components/pages/news/NewsDetailCotnent/NewsDetailContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/news/NewsDetailCotnent/NewsDetailContent.module.scss
@@ -50,6 +50,8 @@
         font-weight: 800;
         line-height: 1.3;
         text-align: left;
+        max-width: 800px; /* Центрирование заголовка */
+        margin: 0 auto;   /* Центрирование */
       }
 
       img {
@@ -67,6 +69,8 @@
         line-height: 1.6;
         text-align: left;
         color: #333333;
+        max-width: 800px; /* Ограничение ширины для улучшения читаемости */
+        margin: 0 auto;   /* Центрирование текста */
       }
 
       .newsInfo {
@@ -244,7 +248,6 @@
     .replyForm {
       max-width: 1200px;
       margin: 0 auto;
-      // height: 200px;
 
       .replyingTo,
       .addNewComment {
