--- a/frontend/src/appPages/site/components/pages/news/NewsDetailCotnent/NewsDetailContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/news/NewsDetailCotnent/NewsDetailContent.module.scss
@@ -49,9 +49,9 @@
         font-size: 32px;
         font-weight: 800;
         line-height: 1.3;
-        text-align: left;
-        max-width: 800px; /* Центрирование заголовка */
-        margin: 0 auto;   /* Центрирование */
+        text-align: center; /* Центрирование заголовка */
+        max-width: 800px;
+        margin: 0 auto;
       }
 
       img {
@@ -62,15 +62,16 @@
         border-radius: 10px;
       }
 
+      /* Описание */
       p {
         width: 100%;
         font-size: 18px;
         font-weight: 400;
         line-height: 1.6;
-        text-align: left;
+        text-align: center; /* Центрирование текста описания */
         color: #333333;
         max-width: 800px; /* Ограничение ширины для улучшения читаемости */
-        margin: 0 auto;   /* Центрирование текста */
+        margin: 0 auto;   /* Центрирование */
       }
 
       .newsInfo {
