--- a/frontend/src/appPages/site/components/pages/news/NewsDetailCotnent/NewsDetailContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/news/NewsDetailCotnent/NewsDetailContent.module.scss
@@ -71,7 +71,9 @@
         text-align: center; /* Центрирование текста описания */
         color: #333333;
         max-width: 800px; /* Ограничение ширины для улучшения читаемости */
-        margin: 0 auto;   /* Центрирование */
+        margin-left: auto;
+        margin-right: auto; /* Добавление явного центрирования */
+        padding: 0;         /* Удаление любых возможных отступов */
       }
 
       .newsInfo {
