--- a/frontend/src/appPages/site/components/pages/news/NewsDetailCotnent/NewsDetailContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/news/NewsDetailCotnent/NewsDetailContent.module.scss
@@ -70,10 +70,10 @@
         line-height: 1.6;
         text-align: center; /* Центрирование текста описания */
         color: #333333;
-        max-width: 800px; /* Ограничение ширины для улучшения читаемости */
+        max-width: 600px; /* Ограничение ширины текста для лучшей читаемости */
         margin-left: auto;
-        margin-right: auto; /* Добавление явного центрирования */
-        padding: 0;         /* Удаление любых возможных отступов */
+        margin-right: auto; /* Центрирование */
+        padding: 0;
       }
 
       .newsInfo {
