--- a/frontend/src/appPages/site/components/pages/news/NewsDetailCotnent/NewsDetailContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/news/NewsDetailCotnent/NewsDetailContent.module.scss
@@ -49,8 +49,8 @@
         font-size: 32px;
         font-weight: 800;
         line-height: 1.3;
-        text-align: center; /* Центрирование заголовка */
-        max-width: 800px;
+        text-align: center;
+        max-width: 1000px;
         margin: 0 auto;
       }
 
@@ -70,7 +70,7 @@
         line-height: 1.6;
         text-align: center; /* Центрирование текста описания */
         color: #333333;
-        max-width: 600px; /* Ограничение ширины текста для лучшей читаемости */
+        max-width: 900px; /* Ограничение ширины текста для лучшей читаемости */
         margin-left: auto;
         margin-right: auto; /* Центрирование */
         padding: 0;
