--- a/frontend/src/appPages/site/components/pages/news/NewsDetailCotnent/NewsDetailContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/news/NewsDetailCotnent/NewsDetailContent.module.scss
@@ -56,8 +56,8 @@
 
       img {
         width: 100%;
-        max-width: 700px;
-        height: auto;
+        max-width: 900px;
+        height: 600px;
         object-fit: cover;
         border-radius: 10px;
       }
