--- a/frontend/src/appPages/site/components/pages/graduates/GraduatesFirstTab/GraduatesFirstTab.module.scss
+++ b/frontend/src/appPages/site/components/pages/graduates/GraduatesFirstTab/GraduatesFirstTab.module.scss
@@ -1,257 +1,304 @@
 .GraduatesFirstTab {
-    .content {
-        padding: 80px 0 50px 0;
-        display: flex;
-        gap: 5px;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+  .content {
+    padding: 80px 0 50px 0;
+    display: flex;
+    gap: 5px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .title {
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 27.24px;
+    text-align: center;
+    color: #000000;
+    padding: 5px 0;
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -2px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 50px;
+      border-bottom: 2px solid black;
+    }
+  }
+
+  .filterContainer {
+    position: relative;
+    width: 200px;
+    margin: 20px auto;
+  }
+
+  .mainFilterButton {
+    width: 100%;
+    padding: 12px 20px;
+    background-color: #6a00a1;
+    color: white;
+    border: none;
+    border-radius: 25px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+    &:hover {
+      background-color: #7c00bf;
+    }
+  }
+
+  .yearsContainer {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    z-index: 10;
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+
+  .yearButton {
+    width: 100%;
+    padding: 10px;
+    background-color: transparent;
+    border: none;
+    border-radius: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+
+    &:hover {
+      background-color: #f0f0f0;
     }
 
-    .title {
-        cursor: pointer;
-        font-size: 20px;
-        font-weight: 600;
-        line-height: 27.24px;
-        text-align: center;
-        color: #000000;
-        padding: 5px 0;
-        position: relative;
-
-        &::after {
-            content: "";
-            position: absolute;
-            bottom: -2px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 50px;
-            border-bottom: 2px solid black;
-        }
+    &.active {
+      background-color: #6a00a1;
+      color: white;
     }
+  }
 
-    .filterContainer {
-        position: relative;
-        width: 200px;
-        margin: 20px auto;
-    }
+  .table {
+    padding: 40px 0 0 0;
+  }
 
-    .mainFilterButton {
-        width: 100%;
-        padding: 12px 20px;
-        background-color: #6a00a1;
-        color: white;
-        border: none;
-        border-radius: 25px;
-        font-size: 18px;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  .tableTitle {
+    display: grid;
+    grid-template-columns: 0.1fr 2.5fr;
+    gap: 80px;
+  }
 
-        &:hover {
-            background-color: #7c00bf;
-        }
-    }
+  .titleText {
+    font-size: 20px;
+    font-weight: 600;
+    padding: 0 100px 0 0;
+    line-height: 27.24px;
+    text-align: left;
+    color: #afafaf;
+  }
 
-    .yearsContainer {
-        position: absolute;
-        top: 100%;
-        left: 0;
-        width: 100%;
-        background-color: white;
-        border-radius: 15px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        padding: 10px;
-        z-index: 10;
-        margin-top: 10px;
-        display: flex;
-        flex-direction: column;
-        gap: 5px;
-    }
+  .tableContent {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 10px;
+  }
 
-    .yearButton {
-        width: 100%;
-        padding: 10px;
-        background-color: transparent;
-        border: none;
-        border-radius: 10px;
-        font-size: 16px;
-        cursor: pointer;
-        transition: all 0.3s ease;
+  .hr {
+    border-bottom: 1px solid #afafaf;
+    padding: 3px 50%;
+  }
 
-        &:hover {
-            background-color: #f0f0f0;
-        }
+  .studentInfo {
+    display: grid;
+    padding: 5px 0;
+    grid-template-columns: 0.1fr 2.5fr;
+    gap: 80px;
+  }
 
-        &.active {
-            background-color: #6a00a1;
-            color: white;
-        }
-    }
+  .tableTextNumber {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 27.24px;
+    text-align: left;
+    display: flex;
+    align-items: center;
+    color: #000000;
+  }
 
-    .table {
-        padding: 40px 0 0 0;
-    }
+  .tableName {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 27.24px;
+    text-align: left;
+    color: #666666;
+    gap: 10px;
+  }
 
-    .tableTitle {
-        display: grid;
-        grid-template-columns: 0.1fr 2.5fr;
-        gap: 80px;
-    }
+  .studentIcon {
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+  }
 
-    .titleText {
-        font-size: 20px;
-        font-weight: 600;
-        padding: 0 100px 0 0;
-        line-height: 27.24px;
-        text-align: left;
-        color: #afafaf;
-    }
+  .loading,
+  .error {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    text-align: center;
+  }
+}
 
-    .tableContent {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        gap: 10px;
-    }
+.pagination {
+  display: flex;
+  gap: 8px;
+  justify-content: center;
+  margin-top: 20px;
+}
 
-    .hr {
-        border-bottom: 1px solid #afafaf;
-        padding: 3px 50%;
-    }
+.pageButton {
+  padding: 8px 12px;
+  background-color: #f4f4f4;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.2s;
 
-    .studentInfo {
-        display: grid;
-        padding: 5px 0;
-        grid-template-columns: 0.1fr 2.5fr;
-        gap: 80px;
-    }
+  &:hover {
+    background-color: #dcdcdc;
+    transform: scale(1.05);
+  }
 
-    .tableTextNumber {
-        font-size: 20px;
-        font-weight: 600;
-        line-height: 27.24px;
-        text-align: left;
-        display: flex;
-        align-items: center;
-        color: #000000;
-    }
+  &.activePage {
+    background-color: #ff0055;
+    color: white;
+  }
+}
 
-    .tableName {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        font-size: 20px;
-        font-weight: 600;
-        line-height: 27.24px;
-        text-align: left;
-        color: #666666;
-        gap: 10px;
-    }
-
-    .studentIcon {
-        border-radius: 50%;
-        width: 35px;
-        height: 35px;
-    }
-
-    .loading, .error {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100vh;
-        text-align: center;
-    }
+.dots {
+  padding: 8px 12px;
+  color: #888;
 }
 
 @media (max-width: 1140px) {
-    .GraduatesFirstTab {
-        .title, .titleText, .tableTextNumber, .tableName {
-            font-size: 17px;
-            font-weight: 500;
-        }
-
-        .titleText {
-            padding: 0 90px 0 0;
-        }
+  .GraduatesFirstTab {
+    .title,
+    .titleText,
+    .tableTextNumber,
+    .tableName {
+      font-size: 17px;
+      font-weight: 500;
     }
+
+    .titleText {
+      padding: 0 90px 0 0;
+    }
+  }
 }
 
 @media (max-width: 768px) {
-    .GraduatesFirstTab {
-        .filterContainer {
-            width: 180px;
-        }
-
-        .mainFilterButton {
-            font-size: 16px;
-        }
-
-        .yearButton {
-            font-size: 14px;
-        }
-
-        .tableTitle {
-            gap: 20px;
-        }
-
-        .table {
-            padding: 20px 0 0 0;
-        }
-
-        .title, .titleText, .tableTextNumber, .tableName {
-            font-size: 15px;
-        }
-
-        .titleText {
-            padding: 0 80px 0 0;
-        }
-
-        .studentIcon {
-            width: 25px;
-            height: 25px;
-        }
+  .GraduatesFirstTab {
+    .filterContainer {
+      width: 180px;
     }
+
+    .mainFilterButton {
+      font-size: 16px;
+    }
+
+    .yearButton {
+      font-size: 14px;
+    }
+
+    .tableTitle {
+      gap: 20px;
+    }
+
+    .table {
+      padding: 20px 0 0 0;
+    }
+
+    .title,
+    .titleText,
+    .tableTextNumber,
+    .tableName {
+      font-size: 15px;
+    }
+
+    .titleText {
+      padding: 0 80px 0 0;
+    }
+
+    .studentIcon {
+      width: 25px;
+      height: 25px;
+    }
+  }
 }
 
 @media (max-width: 480px) {
-    .GraduatesFirstTab {
-        .filterContainer {
-            width: 150px;
-        }
-
-        .mainFilterButton {
-            font-size: 14px;
-        }
-
-        .yearButton {
-            font-size: 12px;
-        }
-
-        .table {
-            padding: 10px 0 0 0;
-        }
-
-        .title, .titleText, .tableTextNumber, .tableName {
-            font-size: 12px;
-            font-weight: 400;
-        }
-
-        .titleText, .tableTextNumber, .tableName {
-            padding: 0;
-        }
-
-        .studentIcon {
-            width: 20px;
-            height: 20px;
-        }
+  .GraduatesFirstTab {
+    .filterContainer {
+      width: 150px;
     }
+
+    .mainFilterButton {
+      font-size: 14px;
+    }
+
+    .yearButton {
+      font-size: 12px;
+    }
+
+    .table {
+      padding: 10px 0 0 0;
+    }
+
+    .title,
+    .titleText,
+    .tableTextNumber,
+    .tableName {
+      font-size: 12px;
+      font-weight: 400;
+    }
+
+    .titleText,
+    .tableTextNumber,
+    .tableName {
+      padding: 0;
+    }
+
+    .studentIcon {
+      width: 20px;
+      height: 20px;
+    }
+  }
 }
 
 @media (max-width: 380px) {
-    .GraduatesFirstTab {
-        .title, .titleText, .tableTextNumber, .tableName {
-            font-size: 12px;
-        }
+  .GraduatesFirstTab {
+    .title,
+    .titleText,
+    .tableTextNumber,
+    .tableName {
+      font-size: 12px;
     }
+  }
 }
