--- a/frontend/src/appPages/site/components/pages/students/StudentsClassTable/StudentsClassTable.module.scss
+++ b/frontend/src/appPages/site/components/pages/students/StudentsClassTable/StudentsClassTable.module.scss
@@ -415,6 +415,7 @@
 
   .tableName {
     font-weight: 500;
+    gap: 8px;
   }
   .studentIcon {
     width: 15px;
@@ -427,7 +428,7 @@
     height: 20px;
   }
   .titleBlock {
-    gap: 20px;
+    gap: 18px;
   }
 
   .filterButtons {
@@ -448,6 +449,7 @@
 
   .tableName {
     font-weight: 500;
+    font-size: 12px;
   }
   .studentIcon {
     width: 10px;
